fixed bugs and added unit tests
